--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -16,7 +16,7 @@
 			<div id="formContainer" class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
 				<form class="forgotMyPassword" action="/forgotpassword" id="resetForm" method="post" >
 				<input type="hidden" name="_csrf" value="{{ csrfToken }}">
-					<input type="email" id="email" name="email" placeholder="Email Address" required/>
+					<input type="email" id="email" name="email" placeholder="Email Address" autofocus required/>
 					<input type="submit" id="resetPassword" value="Reset Password">
 				</form>
 			</div>
