--- a/views/user/reset.hbs
+++ b/views/user/reset.hbs
@@ -15,7 +15,7 @@
 			<div id="formContainer" class="login-form-grids animated wow slideInUp" data-wow-delay=".5s">
 				<form action="/forgotpassword" id="resetForm" method="post" >
 				<input type="hidden" name="_csrf" value="{{ csrfToken }}">
-					<input type="password" id="password" name="password" placeholder="Password" required/>
+					<input type="password" id="password" name="password" placeholder="Password" autofocus required/>
                     <input type="email" id="email" name="email" placeholder="Confirm Password" required/>
 					<input type="submit" value="Reset Password">
 				</form>
