--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -12,7 +12,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4 w3_footer_grid">
-					<h3>Category</h3>
+					<h3>Categories</h3>
 					<ul class="info"> 
 						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Electronics</a></li>
 						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Groceries</a></li>
@@ -31,12 +31,6 @@
 			</div>
 		</div>
 		
-		<div class="footer-copy">
-			
-			<div class="container">
-				<p>© 2018 Whogobuy. All rights reserved | Design by <a href="http://whogobuy.com/">Whogobuy</a></p>
-			</div>
-		</div>
 		
 	</div>	
 	<div class="footer-botm">
