--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,7 +2,7 @@
 	<div class="agileits_header">
 		<div class="container">
 			<div class="w3l_offers">
-				<p><a href="/stocks">SHOP NOW</a></p>
+				<p><strong><a href="/stocks">SHOP NOW</a></strong></p>
 			</div>
 			<div class="agile-login">
 				<ul>
@@ -23,7 +23,7 @@
 					{{/if}}
 
 				</ul>
-			</div>
+			</div><!--
 			<div class="product_list_header">  
 					<form action="/" method="post" class="last"> 
 						<input type="hidden" name="cmd" value="_cart">
@@ -32,7 +32,7 @@
 						<button class="w3view-cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
 						</a>
 					</form>  
-			</div>
+			</div>-->
 			<div class="clearfix"> </div>
 		</div>
 	</div>
@@ -62,6 +62,7 @@
 		</div>
 	</div>
 <!-- //header -->
+
 <!-- navigation -->
 	<div class="navigation-agileits">
 		<div class="container">
