--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -4,20 +4,20 @@
 				<img src="images/11.jpg" alt="" />
 				<!--Slider Description example-->
 				<div class="slide-desc">
-					<h3>Buy goods  at your convininence</h3>
+				<!--	<h3>Buy goods  at your convininence</h3>-->
 				</div>
 			</li>
 			<li>
 				<img src="images/22.jpg" alt="" />
 				  <div class="slide-desc">
-					<h3>Sell products faster</h3>
+				<!--	<h3>Sell products faster</h3>-->
 				</div>
 			</li>
 			
 			<li>
 				<img src="images/44.jpg" alt="" />
 				<div class="slide-desc">
-					<h3>Reach your customers faster</h3>
+				<!--	<h3>Reach your customers faster</h3>-->
 				</div>
 			</li>
 		</ul>
