--- a/public/stylesheets/skdslider.css
+++ b/public/stylesheets/skdslider.css
@@ -49,7 +49,7 @@
     bottom: 28%;
     width: 100%;
     display: inline-block;
-	text-align:center;
+	text-align:right;
 }
 .skdslider .slide-desc > h3 {
     color: #ffffff;
