--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -14,9 +14,11 @@
 				<div class="col-md-4 w3_footer_grid">
 					<h3>Categories</h3>
 					<ul class="info"> 
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Electronics</a></li>
-						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Groceries</a></li>
 						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Body Accessories</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">School Accessories</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Home Appliance</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Random</a></li>
+						<li><i class="fa fa-arrow-right" aria-hidden="true"></i><a href="/stocks">Hot Sales</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 w3_footer_grid">
@@ -30,8 +32,12 @@
 				<div class="clearfix"> </div>
 			</div>
 		</div>
-		
-		
+				<div class="footer-copy">
+			<div class="container">
+				<p>© 2019 KampusSales. All rights reserved | <a href="http://www.whogobuyam.com/">whogobuyam</a></p>
+			</div>
+		</div>
+
 	</div>	
 	<div class="footer-botm">
 			<div class="container">
