--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,10 +1,10 @@
 	<!-- main-slider -->
 		<ul id="demo1">
 			<li>
-				<img src="images/11.jpg" alt="" />
+				<img src="images/11.jpeg" alt="" />
 				<!--Slider Description example-->
 				<div class="slide-desc">
-				<!--	<h3>Buy goods  at your convininence</h3>-->
+					<!-- <h3>Buying at your convininence</h3> -->
 				</div>
 			</li>
 			<li>
@@ -15,7 +15,7 @@
 			</li>
 			
 			<li>
-				<img src="images/44.jpg" alt="" />
+				<img src="images/44.jpeg" alt="" />
 				<div class="slide-desc">
 				<!--	<h3>Reach your customers faster</h3>-->
 				</div>
