Updated my display results

--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -59,7 +59,7 @@
 														<div class="snipcart-details top_brand_home_details">
 															<form action="#" method="post">
 																<fieldset>
-																	<input type="submit" name="submit" value="Add to cart" class="button" />
+																	<input type="submit" name="submit" value="Purchase" class="button" />
 																</fieldset>
 															</form>
 														</div>
@@ -68,7 +68,7 @@
 											</div>
 										</div>
 										
-									</div>
+									</div><br>
 									{{/each}}
 								</div>
 								{{/each}}
