--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -1,9 +1,7 @@
 <!--- household --->
 <br><br>
 <div id="suc">
-
 </div>
-
 	<div class="products">
 		<div class="container">
 			<div class="col-md-4 products-left">
@@ -29,6 +27,7 @@
 									<select name="category" id="category" class="form-control">
 										<option>Automobile</option>
 										<option>Body accessory</option>
+										<option>Clothings</option>
 										<option>Electronics</option>
 										<option>Home Appliance</option>
 										<option>Office Appliance</option>
@@ -52,9 +51,6 @@
 						<div class="hover14 column">
 							{{# each this }}
 							<div class="agile_top_brand_left_grid">
-								<div class="agile_top_brand_left_grid_pos">
-									<img src="images/offer.png" alt=" " class="img-responsive">
-								</div>
 								<div class="agile_top_brand_left_grid1">
 									<figure>
 										<div class="snipcart-item block">
@@ -82,7 +78,7 @@
 							{{/each}}
 						</div>
 					</div>
-					{{/each}}
+					{{/each}}<br>
 						<div class="clearfix"> </div>
 	
 				</div>
