--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
-    <meta name="keywords" content="" />
+	<meta Property="og:description" Content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
+    <meta name="description" content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
+	<meta name="keywords" content="" />
 	<link rel="manifest" href="/manifest.json"/>
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel='stylesheet' href='/stylesheets/bootstrap.css' />
