--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -42,22 +42,20 @@
 		<div class="w3ls_logo_products_left1">
 				<ul class="phone_email">
 					<li><i class="fa fa-phone" aria-hidden="true"></i>Order online or call us : (+0123) 234 567</li>
-					
 				</ul>
 			</div>
 			<div class="w3ls_logo_products_left">
 				<h1><a href="/"><img src="images/logo2.png" width="70px" height="70px"/>whogobuyam</a></h1>
 			</div>
 		<div class="w3l_search">
-			<form action="#" method="post">
-				<input type="search" name="Search" placeholder="Search for a Product..." required="">
+			<form action="/search" method="get">
+				<input type="search" name="search" id="search" placeholder="Search for a Product..." required>
 				<button type="submit" class="btn btn-default search" aria-label="Left Align">
 					<i class="fa fa-search" aria-hidden="true"> </i>
 				</button>
 				<div class="clearfix"></div>
 			</form>
 		</div>
-			
 			<div class="clearfix"> </div>
 		</div>
 	</div>
