--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{title}}</title>
+    <title>{{ title }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
+	<meta name="theme-color" content="#56c590">
 	<meta Property="og:description" Content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
     <meta name="description" content="online marketplace,Used,Clothings, Buy and sell electronics, cars, fashion, Apparel, collectibles,  goods, digital cameras, baby items, and everything else on eBay" />
 	<meta name="keywords" content="" />
