--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,21 +1,21 @@
 	<!-- main-slider -->
 		<ul id="demo1">
 			<li>
-				<img src="images/11.jpeg" alt="" />
+				<img src="images/11.jpeg" alt="Slider Image 1" />
 				<!--Slider Description example-->
 				<div class="slide-desc">
 					<!-- <h3>Buying at your convininence</h3> -->
 				</div>
 			</li>
 			<li>
-				<img src="images/22.jpg" alt="" />
+				<img src="images/22.jpg" alt="Slider Image 2" />
 				  <div class="slide-desc">
 				<!--	<h3>Sell products faster</h3>-->
 				</div>
 			</li>
 			
 			<li>
-				<img src="images/44.jpeg" alt="" />
+				<img src="images/44.jpeg" alt="Slider Image 3" />
 				<div class="slide-desc">
 				<!--	<h3>Reach your customers faster</h3>-->
 				</div>
@@ -51,7 +51,7 @@
 												<figure>
 													<div class="snipcart-item block" >
 														<div class="snipcart-thumb">
-															<a href=""><img title=" " alt=" " width="150px" height="140px" height src="images/ankara1.jpg" /></a>		
+															<a href=""><img title="ankara picture" alt="sAmkara picture 1" width="150px" height="140px" height src="images/ankara1.jpg" /></a>		
 															<p>{{ this.title }}</p>
 															<p>{{ this.description }}</p>
 															<h4>${{ this.price }}</h4>
@@ -88,14 +88,11 @@
 								<div class="col-md-4 top_brand_left">
 									<div class="hover14 column">
 										<div class="agile_top_brand_left_grid">
-											<div class="agile_top_brand_left_grid_pos">
-												<img src="images/offer.png" alt=" " class="img-responsive" />
-											</div>
 											<div class="agile_top_brand_left_grid1">
 												<figure>
 													<div class="snipcart-item block" >
 														<div class="snipcart-thumb">
-															<a href=""><img title=" " alt=" " src="images/7.png" /></a>		
+															<a href=""><img title=" " alt=" image 7" src="images/7.png" /></a>		
 															<p>Sona-masoori-rice</p>
 															<h4>$35.99</h4>
 														</div>
@@ -124,9 +121,6 @@
 								<div class="col-md-4 top_brand_left">
 									<div class="hover14 column">
 										<div class="agile_top_brand_left_grid">
-											<div class="agile_top_brand_left_grid_pos">
-												<img src="images/offer.png" alt=" " class="img-responsive" />
-											</div>
 											<div class="agile_top_brand_left_grid1">
 												<figure>
 													<div class="snipcart-item block" >
