--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,21 +1,21 @@
 	<!-- main-slider -->
 		<ul id="demo1">
 			<li>
-				<img src="images/11.jpeg" alt="Slider Image 1" />
+				<img src="images/11.svg" alt="Slider Image 1" />
 				<!--Slider Description example-->
 				<div class="slide-desc">
 					<!-- <h3>Buying at your convininence</h3> -->
 				</div>
 			</li>
 			<li>
-				<img src="images/22.jpg" alt="Slider Image 2" />
+				<img src="images/22.svg" alt="Slider Image 2" />
 				  <div class="slide-desc">
 				<!--	<h3>Sell products faster</h3>-->
 				</div>
 			</li>
 			
 			<li>
-				<img src="images/44.jpeg" alt="Slider Image 3" />
+				<img src="images/44.svg" alt="Slider Image 3" />
 				<div class="slide-desc">
 				<!--	<h3>Reach your customers faster</h3>-->
 				</div>
