--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -257,12 +257,12 @@
 		<div class="container">
 		<h3>Brand Store</h3><br>
 			  <p class="footer-main">
-			    Creativity helps stores stand out.WhogobuyDoing something a little different can help your bottom line a lot.They build themselves on being a website that offers unique gifts.
-				great example of an online store design that stands out in the crowd.Their products are beautiful and clean.
-				‘what best suits you'. It breaks it down for the customer and makes it enjoyable to look at.stunning design. 
+			    Creativity helps stores stand out .Whogobuyam is doing something different that can help your bottom line a lot.We have built a website that offers unique products.
+				Great example of collections of online stores that stands out in the crowd.Our products are beautiful,clean
+				and what best suits you. Selling breaks down for the customer and makes it enjoyable to look at. We have stunning design
 				to the other shops is that they sell their products on other platforms. 
-				However,they use their website for extra design functionality and to highlight their story
-				So if you have it flaunt it, integrate your social media platforms in to your ecommerce website design.
+				However,we use our website for extra design functionality and to highlight everyone's story
+				So if you have it flaunt it, Also integrate your social media platforms in to your ecommerce website design.
 			  </p>
 		</div>
 	</div>
