--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -6,9 +6,9 @@
 					<h3>Contact</h3>
 					
 					<ul class="address">
-						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>1234k Avenue, 4th block, <span>New York City.</span></li>
-						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">info@example.com</a></li>
-						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+1234 567 567</li>
+						<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Osun State University, OkeBaale, <span>Osogbo City.</span></li>
+						<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@whogobuyam.com">info@whogobuyam.com</a></li>
+						<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+234 1567 567</li>
 					</ul>
 				</div>
 				<div class="col-md-4 w3_footer_grid">
